/* $Id: ChangeLog,v 1.2746 2004-12-04 21:37:13 sao2l02 Exp $ */
2004-12-04: Dietrich Teickner <dietrich_teickner@arcor   >
    - Kernel32: o src\kernel32\hmthread.cpp snall correction
2004-12-04: Dietrich Teickner <dietrich_teickner@arcor   >
    - libwrap:  o Splitting in 2 libs, the old makefile contains to large
                  macros for vac36 - environment or larger pathnames.
2004-11-30: Dietrich Teickner <dietrich_teickner@arcor   >
    - odincrt:  o src\odincrt\critsect.cpp
                  Small change in odincrt. Odin is never !! allowed to leave
                  DosEnterCriticalSection without to be a owner of them.
                  Without them, I have often in BC v 2.2 a exception with fs = OdinFS.
                  After this change I had never this problem. 
2004-11-28: Dietrich Teickner <dietrich_teickner@arcor   >
    - Kernel32: o src\kernel32\hmthread.cpp
                  HMDeviceThreadClass::CreateThread - changes against invalid thread handle. 
                  src\kernel32\asmutil.asm small optimizing.
2004-11-23: Dietrich Teickner <dietrich_teickner@arcor   >
    - Kernel32: o src/kernel32/dbglog.cpp, *.def, include/debugtools.h
                  Multiple debugstr_a/w in one TRACE statement. 
2004-11-14: Dietrich Teickner <dietrich_teickner@arcor   >
    - User32:   o src/user32/hook.cpp
                  workaround against stackoverflow doring rekursive CallNextHookEx in IrfanView 3.XX. 
2004-10-24: Dietrich Teickner <dietrich_teickner@arcor   >
    - User32:   o src/user32/clipboard.cpp
                  Since 2004-05-04 does a open Clipboard not convert between text/unicodetext/oemtext.
                  workaround for text->unicodetext (BC2 with riched20.dll to w98-Notepad). 
2004-10-19: Dietrich Teickner <dietrich_teickner@arcor   >
    - Oleaut32: o more merging from wine into
                  include/win/oleauto.h, include/win/wine/obj_oleaut.h and src/oleaut32/variant.c